fix(editor): tree toolbar initially appears out of place

--- a/apps/cs_client/src/assets/styles/modules/settings/hot-keys.scss
+++ b/apps/cs_client/src/assets/styles/modules/settings/hot-keys.scss
@@ -20,5 +20,5 @@
   gap: 6px;
   flex-direction: column;
 
-  max-width: 480px;
+  max-width: 500px;
 }
