--- a/apps/cs_client/src/assets/styles/modules/tree/tree.scss
+++ b/apps/cs_client/src/assets/styles/modules/tree/tree.scss
@@ -38,6 +38,7 @@
   span > div {
     min-width: 10px;
   }
+  grid-area: tree;
 }
 $bubble-width: 35px;
 .tree__resizeHandle__bubble {
